<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>andino_webots</name>
  <version>0.0.1</version>
  <description>Webots simulation of the Andino robot</description>
  <maintainer email="ignacio.davila@ekumenlabs.com">Ignacio Davila</maintainer>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <maintainer email="christianbarcelo@ekumenlabs.com">Christian Barcelo</maintainer>

  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>andino_description</exec_depend>
  <exec_depend>andino_gz_classic</exec_depend>
  <exec_depend>node_remover_plugin</exec_depend>
  <exec_depend>webots_ros2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
